pages still won't stay visible at the correct times idk

--- a/src/css/profile.css
+++ b/src/css/profile.css
@@ -25,6 +25,17 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
     background-color: rgb(246, 198, 221);
+    position: absolute;
+    left: 0;
+    transition: left 2s;
+  }
+
+  .profile-container.left {
+    left: -9999px;
+  }
+  
+  .profile-container.right {
+    left: 9999px;
   }
 
   .profile-title h1 {
